...
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false" />

    <!-- Add profile -->
    <LinearLayout
        android:id="@+id/rowAddProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_glass_card_small"
        android:clickable="true"
        android:focusable="true"
...
