...
                app:boxBackgroundColor="#80FFFFFF"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_confirmation_number"
                app:startIconTint="@color/textColorAdditional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRedeem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRedeem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:text="@string/vip_redeem_button"
                android:textAllCaps="false"
                app:cornerRadius="12dp"
...
